manifests/ai-platform/20-normalizer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normalizer
  namespace: ai-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: normalizer
  template:
    metadata:
      labels:
        app: normalizer
    spec:
      containers:
        - name: normalizer
          image: raj/normalizer:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: kafka-certs
              mountPath: /etc/kafka-certs
              readOnly: true
            - name: kafka-cluster-ca
              mountPath: /etc/kafka-cluster-ca
              readOnly: true
          readinessProbe:
            exec:
              command: ["python3", "-c", "import os; os.getpid()"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["python3", "-c", "import os; os.getpid()"]
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: kafka-certs
          secret:
            secretName: normalizer
        - name: kafka-cluster-ca
          secret:
            secretName: kafka-cluster-ca-cert
